kubernetes-orchestration/kubernetes-resources/ingress/simple-ingress/simple-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  selector:
    matchLabels:
      app-label: my-app
  replicas: 3
  template:
    metadata:
      labels:
        app-label: my-app
    spec:
      terminationGracePeriodSeconds: 1
      containers:
        - name: nginx
          image: vinsdocker/nginx-gke
---
apiVersion: v1
kind: Service
metadata:
  name: my-app
spec:
  selector:
    app-label: my-app
  ports:
    - port: 80
      targetPort: 80
